* Added ability to create reports based on MS Word (docx), LibreOffice Writer (odt) and MS PowerPoint (pptx) templates
* Added docx, odt, ods report formats for tabular and jasper reports
* Added gridstack dashboard report type
* Have syntax highlighting during report creation
* Added tabbed dashboards option
* Added ReactPivot report type
* Added PivotTable.js report types
* Requires Internet Explorer 8+, or recent versions of other browsers
* Requires Java 7
* Requires Servlet 3.0
* Updated libraries, including jasperreports, quartz, jxls, among others
* Changed license from GPLv2 to GPLv3

ART 2.5.4
* Added Lithuanian translation (thanks to Dalius Guzauskas)
* Added Polish translation (thanks to Pawel Osuch)
* Updated German translation
* Minor css updates

ART 2.5.3
* Fix for incorrect handling of " in parameter value
* Fix for numbers not sorting correctly in Italian locale
* Fix for error when using Conditional Email Output (Inline) jobs
* Fix for null pointer exception when clob field (e.g. varchar(max)) is null
* Fix for error when running a job that uses a jXLS spreadsheet query
* Fix for IllegalArgumentException when using Tomcat 7.0.57+ or 8.0.15+
* Included German translation (thanks to Carsten Pohle)

ART 2.5.2
* Fix for error when drill down column has a null value
* Updated French translation (thanks to Eric Lemesre)
* Minor html tag corrections (thanks to Eric Lemesre)
* Left align text in htmlDataTable and htmlPlain view modes
* Added DataTable translations for Spanish and Portuguese
* Allow display of 0 for numbers when value is null
* Allow chained parameter lov to use dynamic datasource filter
* Left align first column text in crosstab queries

ART 2.5.1
* Added Portuguese translation (thanks to Edson Richter)
* Added Spanish translation (thanks to Carlos Narvaez)
* Updated French translation (thanks to Eric Lemesre)
* Allow custom path for export files (thanks to ckb)