@@ -198,6 +198,9 @@ INSERT INTO ART_QUERIES VALUES(3,66,'PivotTable.js 2','','PivotTable.js with dat
 INSERT INTO ART_QUERIES VALUES(3,67,'PivotTable.js 3','','csv local without any template',0,NULL,'','','','','',NULL,133,'The Mighty Admin',0,'2017-02-06 22:38:48.872000','admin',NULL,0,0,NULL,1,0,'default','','','','','','','','','',0,'')
 INSERT INTO ART_QUERIES VALUES(3,68,'PivotTable.js 4','','csv local with a template specifying the header csv option',0,NULL,'sample-pivottablejs4.js','','','','',NULL,133,'The Mighty Admin',0,'2017-02-06 22:44:35.035000','admin',NULL,0,0,NULL,1,0,'default','','','','','','','','','',0,'')
 INSERT INTO ART_QUERIES VALUES(3,69,'PivotTable.js 5','','csv server',0,NULL,'sample-pivottablejs4.js','','','','',NULL,134,'The Mighty Admin',0,'2017-02-06 22:49:50.850000','admin',NULL,0,0,NULL,1,0,'default','','','','','','','','','',0,'{\u000d\u000a    "dataFile": "sample-pivottablejs5.csv"\u000d\u000a}')
+INSERT INTO ART_QUERIES VALUES(3,70,'Dygraphs 1','','Dygraphs using database data',1,NULL,'','','','','',NULL,135,'The Mighty Admin',0,'2017-02-08 18:52:32.880000','admin',NULL,0,0,NULL,1,0,'default','','','','','','','','','',0,'')
+INSERT INTO ART_QUERIES VALUES(3,71,'Dygrahps 2','','CSV Local',0,NULL,'','','','','',NULL,136,'The Mighty Admin',0,'2017-02-08 18:56:44.644000','admin',NULL,0,0,NULL,1,0,'default','','','','','','','','','',0,'')
+INSERT INTO ART_QUERIES VALUES(3,72,'Dygraphs 3','','CSV Server',0,NULL,'','','','','',NULL,137,'The Mighty Admin',0,'2017-02-08 18:58:57.295000','admin',NULL,0,0,NULL,1,0,'default','','','','','','','','','',0,'{\u000d\u000a    "dataFile": "sample-dygraphs3.csv"\u000d\u000a}')
 INSERT INTO ART_QUERY_FIELDS VALUES(6,1,'Region','Select Region','Select one item from the list','',NULL,NULL,'2011-01-19 00:00:00.000000',0,-1,'Y','I','regionId','N',4,-1,'VARCHAR',NULL,1)
 INSERT INTO ART_QUERY_FIELDS VALUES(6,2,'From','From Date','Pick a date by clicking on the calendar icon','2010-01-01',NULL,NULL,'2011-01-19 00:00:00.000000',0,-1,'N','I','startDate','N',4,-1,'DATE',NULL,1)
 INSERT INTO ART_QUERY_FIELDS VALUES(6,3,'To','To Date','Pick a date by clicking on the calendar icon','',NULL,NULL,'2011-01-19 00:00:00.000000',0,-1,'N','I','endDate','N',4,-1,'DATE',NULL,1)
@@ -320,6 +323,9 @@ INSERT INTO ART_ALL_SOURCES VALUES(66,1,'select c.name "City",\u000d\u000ai.name
 INSERT INTO ART_ALL_SOURCES VALUES(67,1,'')
 INSERT INTO ART_ALL_SOURCES VALUES(68,1,'')
 INSERT INTO ART_ALL_SOURCES VALUES(69,1,'')
+INSERT INTO ART_ALL_SOURCES VALUES(70,1,'select order_date, volume\u000d\u000afrom orders')
+INSERT INTO ART_ALL_SOURCES VALUES(71,1,'')
+INSERT INTO ART_ALL_SOURCES VALUES(72,1,'')
 INSERT INTO ART_DATABASES VALUES(1,'SampleDB','org.hsqldb.jdbcDriver','jdbc:hsqldb:file:C:\toa\Projects\ART\hg\src\art-parent\art\target\art\WEB-INF\hsqldb\SampleDB;shutdown=true;create=false;hsqldb.write_delay=false','SAMPLE','8hswOkBtnIyBTnTC8UYRgNgvVRP53enEhcVBXvodwvs=','2012-11-30 00:00:00.000000',NULL,20,'',1,NULL,NULL,NULL,NULL,NULL,'AES','JDBC')
 INSERT INTO ART_DATABASES VALUES(2,'ArtRepository','org.hsqldb.jdbcDriver','jdbc:hsqldb:file:C:\toa\Projects\ART\hg\src\art-parent\art\target\art\WEB-INF\hsqldb\ArtRepositoryDB;shutdown=true;create=false;hsqldb.write_delay=false','ART','whtXmBhmX2p/2bpcyQ+aAlryRdWU71hn1z24gZuBMIU=','2011-05-18 00:00:00.000000',NULL,20,'',1,NULL,NULL,NULL,NULL,NULL,'AES','JDBC')
 INSERT INTO ART_JOBS VALUES(1,13,'admin','--','','','','','','2017-02-03 13:30:57.497000','2017-02-03 13:30:58.369000',NULL,'2017-03-01 03:00:00.000000','2016-05-11 12:27:07.475000',NULL,'X','REGIONS_DATAMART','','0','3','1','*','?','','',0,0,1,1,NULL,'2016-05-11 12:27:07.509000',NULL,'admin','CacheInsert','Table Name (rows inserted):  <code>REGIONS_DATAMART</code> (48)<br />Columns Names:<br /><code> Period Region Volume</code>','',0,0,0,1,NULL,NULL,NULL)
@@ -808,6 +814,10 @@ INSERT INTO ART_LOGS VALUES('admin','0:0:0:0:0:0:0:1',0,0,'query, null','query',
 INSERT INTO ART_LOGS VALUES('admin','0:0:0:0:0:0:0:1',0,0,'query, null','query',67,'2017-02-06 22:38:59.021000')
 INSERT INTO ART_LOGS VALUES('admin','0:0:0:0:0:0:0:1',0,0,'query, null','query',68,'2017-02-06 22:44:45.298000')
 INSERT INTO ART_LOGS VALUES('admin','0:0:0:0:0:0:0:1',0,0,'query, null','query',69,'2017-02-06 22:50:02.038000')
+INSERT INTO ART_LOGS VALUES('admin','0:0:0:0:0:0:0:1',NULL,NULL,'Internal','login',NULL,'2017-02-08 18:43:45.879000')
+INSERT INTO ART_LOGS VALUES('admin','0:0:0:0:0:0:0:1',1,0,'query, null','query',70,'2017-02-08 18:52:50.286000')
+INSERT INTO ART_LOGS VALUES('admin','0:0:0:0:0:0:0:1',0,0,'query, null','query',71,'2017-02-08 18:56:55.465000')
+INSERT INTO ART_LOGS VALUES('admin','0:0:0:0:0:0:0:1',0,0,'query, null','query',72,'2017-02-08 18:59:10.423000')
 INSERT INTO ART_SHARED_JOBS VALUES(2,'auser',NULL,NULL,NULL,NULL)
 INSERT INTO ART_JOB_SCHEDULES VALUES('Last Day of Every Month','0','23','L','*','?',NULL,NULL,NULL,NULL,1,NULL)
 INSERT INTO ART_USER_GROUPS VALUES(2,'Art Demo User Goup','user in this group can access all the demo queries',NULL,NULL,NULL,NULL,NULL,NULL)
@@ -1000,6 +1010,9 @@ INSERT INTO ART_REPORT_TYPES VALUES(131,'Thymeleaf')
 INSERT INTO ART_REPORT_TYPES VALUES(132,'PivotTable.js')
 INSERT INTO ART_REPORT_TYPES VALUES(133,'PivotTable.js: CSV Local')
 INSERT INTO ART_REPORT_TYPES VALUES(134,'PivotTable.js: CSV Server')
+INSERT INTO ART_REPORT_TYPES VALUES(135,'Dygraphs')
+INSERT INTO ART_REPORT_TYPES VALUES(136,'Dygraphs: CSV Local')
+INSERT INTO ART_REPORT_TYPES VALUES(137,'Dygraphs: CSV Server')
 INSERT INTO ART_JOB_TYPES VALUES(1,'Alert')
 INSERT INTO ART_JOB_TYPES VALUES(2,'Email Output (Attachment)')
 INSERT INTO ART_JOB_TYPES VALUES(3,'Publish')
@@ -1024,7 +1037,7 @@ INSERT INTO QRTZ_JOB_DETAILS VALUES('ArtScheduler','job3','jobGroup',NULL,'art.j
 INSERT INTO QRTZ_JOB_DETAILS VALUES('ArtScheduler','job4','jobGroup',NULL,'art.jobrunners.ReportJob',FALSE,FALSE,FALSE,FALSE,'aced0005737200156f72672e71756172747a2e4a6f62446174614d61709fb083e8bfa9b0cb020000787200266f72672e71756172747a2e7574696c732e537472696e674b65794469727479466c61674d61708208e8c3fbc55d280200015a0013616c6c6f77735472616e7369656e74446174617872001d6f72672e71756172747a2e7574696c732e4469727479466c61674d617013e62ead28760ace0200025a000564697274794c00036d617074000f4c6a6176612f7574696c2f4d61703b787001737200116a6176612e7574696c2e486173684d61700507dac1c31660d103000246000a6c6f6164466163746f724900097468726573686f6c6478703f4000000000000c770800000010000000017400056a6f624964737200116a6176612e6c616e672e496e746567657212e2a0a4f781873802000149000576616c7565787200106a6176612e6c616e672e4e756d62657286ac951d0b94e08b0200007870000000047800')
 INSERT INTO QRTZ_JOB_DETAILS VALUES('ArtScheduler','job5','jobGroup',NULL,'art.jobrunners.ReportJob',FALSE,FALSE,FALSE,FALSE,'aced0005737200156f72672e71756172747a2e4a6f62446174614d61709fb083e8bfa9b0cb020000787200266f72672e71756172747a2e7574696c732e537472696e674b65794469727479466c61674d61708208e8c3fbc55d280200015a0013616c6c6f77735472616e7369656e74446174617872001d6f72672e71756172747a2e7574696c732e4469727479466c61674d617013e62ead28760ace0200025a000564697274794c00036d617074000f4c6a6176612f7574696c2f4d61703b787001737200116a6176612e7574696c2e486173684d61700507dac1c31660d103000246000a6c6f6164466163746f724900097468726573686f6c6478703f4000000000000c770800000010000000017400056a6f624964737200116a6176612e6c616e672e496e746567657212e2a0a4f781873802000149000576616c7565787200106a6176612e6c616e672e4e756d62657286ac951d0b94e08b0200007870000000057800')
 INSERT INTO QRTZ_JOB_DETAILS VALUES('ArtScheduler','job6','jobGroup',NULL,'art.jobrunners.ReportJob',FALSE,FALSE,FALSE,FALSE,'aced0005737200156f72672e71756172747a2e4a6f62446174614d61709fb083e8bfa9b0cb020000787200266f72672e71756172747a2e7574696c732e537472696e674b65794469727479466c61674d61708208e8c3fbc55d280200015a0013616c6c6f77735472616e7369656e74446174617872001d6f72672e71756172747a2e7574696c732e4469727479466c61674d617013e62ead28760ace0200025a000564697274794c00036d617074000f4c6a6176612f7574696c2f4d61703b787001737200116a6176612e7574696c2e486173684d61700507dac1c31660d103000246000a6c6f6164466163746f724900097468726573686f6c6478703f4000000000000c770800000010000000017400056a6f624964737200116a6176612e6c616e672e496e746567657212e2a0a4f781873802000149000576616c7565787200106a6176612e6c616e672e4e756d62657286ac951d0b94e08b0200007870000000067800')
-INSERT INTO QRTZ_TRIGGERS VALUES('ArtScheduler','clean','clean','clean','clean',NULL,1486411200000,1486410600000,5,'WAITING','CRON',1486409178000,0,NULL,0,'')
+INSERT INTO QRTZ_TRIGGERS VALUES('ArtScheduler','clean','clean','clean','clean',NULL,1486569600000,1486569000000,5,'WAITING','CRON',1486568611000,0,NULL,0,'')
 INSERT INTO QRTZ_TRIGGERS VALUES('ArtScheduler','trigger1','triggerGroup','job1','jobGroup',NULL,1488326400000,1486117850861,5,'WAITING','CRON',1462958827000,0,NULL,0,'')
 INSERT INTO QRTZ_TRIGGERS VALUES('ArtScheduler','trigger2','triggerGroup','job2','jobGroup',NULL,1488312000000,1486117850828,5,'WAITING','CRON',1459497987000,0,NULL,0,'')
 INSERT INTO QRTZ_TRIGGERS VALUES('ArtScheduler','trigger3','triggerGroup','job3','jobGroup',NULL,1517428800000,1486117850845,5,'WAITING','CRON',1459497987000,0,NULL,0,'')
