@@ -1,0 +1,4 @@
+date value, series 1, another value
+2010/02/15 14:00:45, 12, 45
+2010/02/15 14:01:12, 5, 100
+2010/02/15 14:01:35, 7, 60
